<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="how_to_pkay">How to Play</string>
    <string name="how_to_Play">How to Play</string>
    <string name="tap_the_box_and_Buttons">Tap the Boxes and Buttons</string>
    <string name="red">Red</string>
    <string name="yellow_button" />
    <string name="yellow_Button">Yellow</string>
    <string name="green_button">Green</string>
</resources>